Use a red destructive button for closing applications

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -15,6 +15,7 @@ $button-colour: #00823b;
 @import "patterns/step-by-step-navigation";
 @import "patterns/task-list";
 @import "patterns/related-items";
+@import "patterns/destructive-button";
 
 blockquote {
   margin: 0;
