Put back message about delay
This tells users that it is immediate and affects both Find and UCAS Apply.

--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -106,7 +106,7 @@
           {{ macros.checkboxGroup(course.programmeCode + '-vacancies-choice', fields, errors) }}
         {% endif %}
 
-        <!-- <p>There will be a delay before your changes are reflected on UCAS Apply.</p> -->
+        <p>Changes will appear in Find and on UCAS Apply after a short delay.</p>
 
         <div class="add-double-bottom-margin">
           {% if data[course.programmeCode + '-multi-location'] %}
