Use check your answers variant for courses
* Condense information shown
* Add course information (static at the moment)
* Don't bold the labels, they're obvious enough – otherwise too much bold on the page
* Shorten empty text

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -436,43 +436,38 @@
 </div>
 {% endmacro %}
 
-{% macro coursePart(id, label, errors, coursePath) %}
-{% set e = error(id, errors) %}
-
-<div {% if e %}class="course-part-error"{% endif %}>
-  <dt class="course-part-label">
-    {{ label }}
-    {% if e %}<a href="{{ e.href }}" class="course-part-label-error">{{ e.text }}</a>{% endif %}
-  </dt>
-  {% if (value(id)) %}
-    <dd class="course-part-value">
-      {{ value(id) }}
+{% macro coursePart(id, label, errors, truncate = true) %}
+  {% set e = error(id, errors) %}
+  <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question {% if e %}app-check-your-answers__question--error{% endif %}">
+      {{ label }}
+      {% if e %}<br /><a href="{{ e.href }}">{{ e.text }}</a>{% endif %}
+    </dt>
+    <dd class="app-check-your-answers__answer {% if truncate %}app-check-your-answers__answer--truncate{% endif %} {% if not value(id) %}empty{% endif %}">
+      {% if (value(id)) %}
+        {{ value(id) }}
+      {% else %}
+        Empty
+      {% endif %}
     </dd>
-  {% else %}
-    <dd class="course-part-value course-part-value--empty">
-      This field is empty
-    </dd>
-  {% endif %}
-</div>
+  </div>
 {% endmacro %}
 
 {% macro feesCoursePart(id, label, errors) %}
-{% set e = error(id, errors) %}
-<div {% if e %}class="course-part-error"{% endif %}>
-  <dt class="course-part-label">
-    {{ label }}
-    {% if e %}<a href="{{ e.href }}" class="course-part-label-error">{{ e.text }}</a>{% endif %}
-  </dt>
-  {% if (value(id)) %}
-    <dd class="course-part-value">
-      £{{ value(id) }}
+  {% set e = error(id, errors) %}
+  <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question {% if e %}app-check-your-answers__question--error{% endif %}">
+      {{ label }}
+      {% if e %}<br /><a href="{{ e.href }}">{{ e.text }}</a>{% endif %}
+    </dt>
+    <dd class="app-check-your-answers__answer {% if not value(id) %}empty{% endif %}">
+      {% if (value(id)) %}
+        £{{ value(id) }}
+      {% else %}
+        Empty
+      {% endif %}
     </dd>
-  {% else %}
-    <dd class="course-part-value course-part-value--empty">
-      This field is empty
-    </dd>
-  {% endif %}
-</div>
+  </div>
 {% endmacro %}
 
 {% macro previewPart(id, org = false) %}
