--- a/app/views/course.html
+++ b/app/views/course.html
@@ -66,72 +66,9 @@
       <div class="course-parts course-parts--large">
         <ul class="course-parts-items">
           <li class="course-parts-item">
-            <h3 class="course-part-task">Course information</h3>
-            <!-- <a class="course-part-task-action" href="#">Edit</a> -->
-            <div style="overflow: hidden; clear: left; margin-bottom: 30px;"></div>
-            <p class="govuk-body-l">{{ course.options }}</p>
-            <dl class="course-part-tasks aligned add-top-margin add-bottom-margin">
-              <dt>Level:</dt>
-              <dd>{{ course.level }}</dd>
-              <dt>Special educational needs:</dt>
-              <dd>
-                {% if course.sen %}
-                  Yes
-                {% else %}
-                  No
-                {% endif %}
-              </dd>
-              <dt>Subject:</dt>
-              <dd>{{ course.subject }}</dd>
-              {% if course.subject == 'Modern languages' %}
-                <dt>Languages:</dt>
-                <dd>{{ course.languages.join(', ') }}</dd>
-              {% endif %}
-              <dt>Outcome:</dt>
-              <dd>{{ course.outcome or data[course.programmeCode + '-outcome'] }}</dd>
-              <dt>Full time or part time:</dt>
-              <dd>{{ course['full-part'] }}</dd>
-              {% if data['new-course']['include-fee-or-salary'] %}
-                <dt>Fee or salary:</dt>
-                <dd>{{ course.type }}</dd>
-              {% endif %}
-              {% if data['new-course']['include-accredited'] %}
-                <dt>Accredited provider:</dt>
-                <dd>{{ course.accrediting }}</dd>
-              {% endif %}
-            </dl>
-          </li>
-          <!-- <li class="course-parts-item">
-            <h3 class="course-part-task">Course information</h3>
-
-            <a class="course-part-task-action" href="{{ coursePath }}/about-this-course">Edit</a>
-
-            <dl class="course-part-tasks aligned add-top-margin add-bottom-margin">
-              <dt>Status:</dt>
-              <dd>Running</dd>
-              <dt>Training provider code:</dt>
-              <dd>{{ course.providerCode }}</dd>
-              <dt>Training programme code:</dt>
-              <dd>{{ course.programmeCode }}</dd>
-              <dt>Accredited provider:</dt>
-              <dd>{{ course.accrediting }}</dd>
-              <dt>Route:</dt>
-              <dd>{{ course.route }}</dd>
-              <dt>Subjects:</dt>
-              <dd>{{ course.subjects }}</dd>
-              <dt>Age range:</dt>
-              <dd>{{ course.ageRange }}</dd>
-              <dt>Qualification:</dt>
-              <dd>{{ course.qualifications }}</dd>
-              <dt>Regions:</dt>
-              <dd>{{ course.regions }}</dd>
-            </dl>
-          </li> -->
-          <li class="course-parts-item">
             <h3 class="course-part-task">About this course</h3>
-
-            <a class="course-part-task-action" href="{{ coursePath }}/about-this-course">Edit</a>
-            <dl class="course-part-tasks">
+            <a class="course-part-task-action" href="{{ coursePath }}/about-this-course">Edit about this course</a>
+            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-4">
               {{ macros.coursePart(course.programmeCode + '-about-this-course', 'About this course', errors, coursePath) }}
               {{ macros.coursePart(course.programmeCode + '-interview-process', 'Interview process (optional)') }}
               {{ macros.coursePart(course.programmeCode + '-placement-school-policy', 'How school placements work', errors, coursePath) }}
@@ -139,8 +76,8 @@
           </li>
           <li class="course-parts-item">
             <h3 class="course-part-task">Course length and {% if course.salaried %}salary{% else %}fees{% endif %}</h3>
-            <a class="course-part-task-action" href="{{ coursePath }}/fees-and-length">Edit</a>
-            <dl class="course-part-tasks">
+            <a class="course-part-task-action" href="{{ coursePath }}/fees-and-length">Edit course length and {% if course.salaried %}salary{% else %}fees{% endif %}</a>
+            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-4">
               {% if data[course.programmeCode + '-duration'] == 'Other' %}
                 {{ macros.coursePart(course.programmeCode + '-duration-other', 'Course length', errors, coursePath) }}
               {% else %}
@@ -160,15 +97,15 @@
             <h3 class="course-part-task">
               Requirements and eligibility
             </h3>
-            <a class="course-part-task-action" href="{{ coursePath }}/requirements">Edit</a>
+            <a class="course-part-task-action" href="{{ coursePath }}/requirements">Edit requirements and eligibility</a>
 
-            <dl class="course-part-tasks">
+            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-4">
               {{ macros.coursePart(course.programmeCode + '-qualifications-required', 'Qualifications needed', errors, coursePath) }}
               {{ macros.coursePart(course.programmeCode + '-personal-qualities', 'Personal qualities (optional)') }}
               {{ macros.coursePart(course.programmeCode + '-other-requirements', 'Other requirements (optional)') }}
             </dl>
           </li>
-          <li class="course-parts-item">
+          <!-- <li class="course-parts-item">
             <h3 class="course-part-task">Training locations</h3>
 
             <div style="clear: left; padding-top: 20px">
@@ -204,6 +141,134 @@
                 text: detailsText | safe
               }) }}
             </div>
+          </li> -->
+          <li class="course-parts-item">
+            <h3 class="course-part-task">
+              Course information
+            </h3>
+            <a class="course-part-task-action" href="{{ coursePath }}/requirements">Change course information</a>
+            <dl class="app-check-your-answers app-check-your-answers--long govuk-!-margin-top-4">
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Level
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  Primary
+                </dd>
+              </div>
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  SEND
+                </dt>
+                <dd class="app-check-your-answers__answer">
+
+                    Yes
+
+                </dd>
+              </div>
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Subject
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  Primary with Geography and History
+                </dd>
+              </div>
+
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Outcome
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  PGCE with QTS
+                </dd>
+              </div>
+
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Fee or salary
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  Salaried
+                </dd>
+                <dd class="app-check-your-answers__change" style="display: none">
+                  <a href="/new/E815/funding">
+                    Change<span class="govuk-visually-hidden"> fee or salary</span>
+                  </a>
+                </dd>
+              </div>
+
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Full or part time
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  Full time
+                </dd>
+                <dd class="app-check-your-answers__change" style="display: none">
+                  <a href="/new/E815/full-time-part-time">
+                    Change<span class="govuk-visually-hidden"> full time or part time</span>
+                  </a>
+                </dd>
+              </div>
+
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Training locations
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  Chelsea Academy SW10 0AB<br>Drayton Manor High School
+                </dd>
+                <dd class="app-check-your-answers__change" style="display: none">
+                  <a href="/new/E815/training-locations">
+                    Change<span class="govuk-visually-hidden"> training locations</span>
+                  </a>
+                </dd>
+              </div>
+
+
+
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Separate accredited provider?
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  No, we are the accredited provider
+                </dd>
+              </div>
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Minimum requirements
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  English
+                </dd>
+              </div>
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Title
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  Primary with Geography and History (with Special educational needs and disability)
+                </dd>
+              </div>
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Description
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  PGCE with QTS full time with salary
+                </dd>
+              </div>
+              <div class="app-check-your-answers__contents">
+                <dt class="app-check-your-answers__question">
+                  Course code
+                </dt>
+                <dd class="app-check-your-answers__answer">
+                  E815
+                </dd>
+              </div>
+            </dl>
           </li>
         </ul>
       </div>
