--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -33,7 +33,7 @@
           <p><a href="#">Change</a></p>
         {% endset %}
 
-        {{ macros.checkboxGroup(code + '-new-min-requirements', [
+        {{ macros.checkboxGroup(code + '-min-requirements', [
           {
             name: 'English',
             more: moreText
