--- a/app/views/new/full-time-part-time.html
+++ b/app/views/new/full-time-part-time.html
@@ -24,7 +24,7 @@
           ]
         %}
 
-        {{ macros.radioGroup(code + '-new-full-part', fields, errors) }}
+        {{ macros.radioGroup(code + '-full-part', fields, errors) }}
 
         <input type="submit" class="govuk-button" value="Continue" />
       </form>
