--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -32,7 +32,7 @@
           ]
         %}
 
-        {{ macros.radioGroup(code + '-new-outcome', fields, errors) }}
+        {{ macros.radioGroup(code + '-outcome', fields, errors) }}
 
         <input type="submit" class="govuk-button" value="Continue" />
       </form>
