--- a/app/views/course.html
+++ b/app/views/course.html
@@ -161,7 +161,11 @@
                   SEND
                 </dt>
                 <dd class="app-check-your-answers__answer">
-                  {{ course.sen }}
+                  {% if course.sen %}
+                    Yes
+                  {% else %}
+                    No
+                  {% endif %}
                 </dd>
               </div>
               <div class="app-check-your-answers__contents">
