--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -17,7 +17,7 @@
               Level
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-phase'] }}
+              {{ data[code + '-phase'] }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/phase">
@@ -30,7 +30,7 @@
               SEND
             </dt>
             <dd class="app-check-your-answers__answer">
-              {% if data[code + '-new-sen'] %}
+              {% if data[code + '-sen'] %}
                 Yes
               {% else %}
                 No
@@ -47,7 +47,7 @@
               Subject
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-subject'] }}
+              {{ data[code + '-subject'] }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/subject">
@@ -55,19 +55,19 @@
               </a>
             </dd>
           </div>
-          {% if data[code + '-new-subject'] == 'Modern languages' %}
+          {% if data[code + '-subject'] == 'Modern languages' %}
           <div class="app-check-your-answers__contents">
             <dt class="app-check-your-answers__question">
               Languages
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-first-language'] }}
-              {% if data[code + '-new-second-language'] %}
-                <br />{{ data[code + '-new-second-language'] }}
+              {{ data[code + '-first-language'] }}
+              {% if data[code + '-second-language'] %}
+                <br />{{ data[code + '-second-language'] }}
               {% endif %}
-              {% if data[code + '-new-further-languages'] %}
+              {% if data[code + '-further-languages'] %}
                 <br />
-                {{ data[code + '-new-further-languages'].join('<br />') | safe }}
+                {{ data[code + '-further-languages'].join('<br />') | safe }}
               {% endif %}
             </dd>
             <dd class="app-check-your-answers__change">
@@ -82,7 +82,7 @@
               Outcome
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-outcome'] }}
+              {{ data[code + '-outcome'] }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/outcome">
@@ -96,7 +96,7 @@
               Fee or salary
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-type'] }}
+              {{ data[code + '-type'] }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/funding">
@@ -110,7 +110,7 @@
               Full or part time
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-full-part'] }}
+              {{ data[code + '-full-part'] }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/full-time-part-time">
@@ -118,13 +118,13 @@
               </a>
             </dd>
           </div>
-          {% if data['new-course']['include-locations'] and data[code + '-new-locations'] %}
+          {% if data['new-course']['include-locations'] and data[code + '-locations'] %}
           <div class="app-check-your-answers__contents">
             <dt class="app-check-your-answers__question">
               Training locations
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-locations'] | join('<br>') | safe }}
+              {{ data[code + '-locations'] | join('<br>') | safe }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/training-locations">
@@ -134,13 +134,13 @@
           </div>
           {% endif %}
           {% if data['new-course']['include-accredited'] %}
-            {% if data[code + '-new-has-accredited-provider'] == 'Yes' %}
+            {% if data[code + '-has-accredited-provider'] == 'Yes' %}
               <div class="app-check-your-answers__contents">
                 <dt class="app-check-your-answers__question">
                   Accredited provider
                 </dt>
                 <dd class="app-check-your-answers__answer">
-                  {{ data[code + '-new-accredited-provider'] }}
+                  {{ data[code + '-accredited-provider'] }}
                 </dd>
                 <dd class="app-check-your-answers__change">
                   <a href="/new/{{ code }}/accredited-provider">
@@ -154,7 +154,7 @@
                   Separate accredited provider?
                 </dt>
                 <dd class="app-check-your-answers__answer">
-                  {{ data[code + '-new-has-accredited-provider'] }}
+                  {{ data[code + '-has-accredited-provider'] }}
                 </dd>
                 <dd class="app-check-your-answers__change">
                   <a href="/new/{{ code }}/accredited-provider">
@@ -169,7 +169,7 @@
               Minimum requirements
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-min-requirements'] or 'None' }}
+              {{ data[code + '-min-requirements'] or 'None' }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/eligibility">
@@ -182,7 +182,7 @@
               Title
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-new-title'] or data[code + '-new-generated-title'] or generatedTitle }}
+              {{ data[code + '-title'] or data[code + '-generated-title'] or generatedTitle }}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/title">
@@ -220,7 +220,7 @@
         <div class="govuk-inset-text">
           <h3 class="govuk-heading-m">
             <span class="govuk-heading-s govuk-!-margin-bottom-0">{{ data['training-provider-name'] }}</span>
-            {{ data[code + '-new-title'] or generatedTitle }} ({{ code }})
+            {{ data[code + '-title'] or generatedTitle }} ({{ code }})
           </h3>
           <p>Course: {{ courseOffered }}</p>
         </div>
