--- a/app/views/new/funding.html
+++ b/app/views/new/funding.html
@@ -23,7 +23,7 @@
           ]
         %}
 
-        {{ macros.radioGroup(code + '-new-type', fields, 0, false) }}
+        {{ macros.radioGroup(code + '-type', fields, 0, false) }}
 
         <input type="submit" class="govuk-button" value="Continue" />
       </form>
