--- a/app/views/new/training-locations.html
+++ b/app/views/new/training-locations.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form action="{{ paths.next }}" method="post">
-        {% if data[code + '-new-full-part'] == 'Full time or part time' %}
+        {% if data[code + '-full-part'] == 'Full time or part time' %}
           {% set vacancyFields = [
               {
                 name: 'Full time places'
@@ -23,12 +23,12 @@
 
           {% set more %}
             <p>Does this location offer full time places, part time places or both?</p>
-            {{ macros.checkboxGroup(code + '-new-location-full-part', vacancyFields) }}
+            {{ macros.checkboxGroup(code + '-location-full-part', vacancyFields) }}
           {% endset %}
           {% set modifiedLocations = locations|addMoreToFields(more) %}
-          {{ macros.checkboxGroup(code + '-new-locations', modifiedLocations) }}
+          {{ macros.checkboxGroup(code + '-locations', modifiedLocations) }}
         {% else %}
-          {{ macros.checkboxGroup(code + '-new-locations', locations) }}
+          {{ macros.checkboxGroup(code + '-locations', locations) }}
         {% endif %}
         <input type="submit" class="govuk-button" value="Continue" />
       </form>
