--- a/app/views/new/subject.html
+++ b/app/views/new/subject.html
@@ -35,6 +35,8 @@
            { name: 'Design and technology'},
            { name: 'Drama'},
            { name: 'Economics'},
+           { name: 'English'},
+           { name: 'English literature'},
            { name: 'Geography'},
            { name: 'Health and social care'},
            { name: 'History'},
