--- a/app/views/new/confirm.html
+++ b/app/views/new/confirm.html
@@ -72,7 +72,7 @@
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/languages">
-                Change<span class="govuk-visually-hidden"> subject</span>
+                Change<span class="govuk-visually-hidden"> languages</span>
               </a>
             </dd>
           </div>
@@ -169,7 +169,11 @@
               Minimum requirements
             </dt>
             <dd class="app-check-your-answers__answer">
-              {{ data[code + '-min-requirements'] or 'None' }}
+              {% if data[code + '-min-requirements'] %}
+                {{ data[code + '-min-requirements'].join('<br />') | safe }}
+              {% else %}
+                None
+              {% endif %}
             </dd>
             <dd class="app-check-your-answers__change">
               <a href="/new/{{ code }}/eligibility">
