--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -105,7 +105,7 @@
                     <td class="govuk-table__cell"></td> -->
                   {% if (loop.index < 5) %}
                     <td class="govuk-table__cell">
-                      <a href="#" class="govuk-heading-s govuk-!-margin-0">{{ course.name }} ({{ course.programmeCode }})</a>
+                      <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-heading-s govuk-!-margin-0">{{ course.name }} ({{ course.programmeCode }})</a>
                       <span class="govuk-body-s">{{ course.options }}</span>
                     </td>
                     <td class="govuk-table__cell">
@@ -119,7 +119,7 @@
                     <td class="govuk-table__cell">{{ data[course.programmeCode + '-vacancies-flag'] }} (<a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/vacancies">Edit</a>)</td>
                   {% else %}
                     <td class="govuk-table__cell">
-                      <a href="#" class="govuk-heading-s govuk-!-margin-0">{{ course.name }} ({{ course.programmeCode }})</a>
+                      <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-heading-s govuk-!-margin-0">{{ course.name }} ({{ course.programmeCode }})</a>
                       <span class="govuk-body-s">{{ course.options }}</span>
                     </td>
                     <td class="govuk-table__cell">
