Update status column on course pages
* Update to reflect new courses table
* Make it clear what's on find
* Make it clear if applications are open
* Include a new "published with changes" status

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -93,62 +93,39 @@
             {% for course in data['ucasCourses'] %}
               {% if course.accrediting == accrediting.name %}
                 <tr class="govuk-table__row">
-                    <!-- <td class="govuk-table__cell">
-                      <a href="/course-not-running/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-heading-s">{{ course.name }} ({{ course.programmeCode }})</a>
-                      <br /><span class="govuk-body-s">{{ course.options }}</span>
-                    </td>
-                    <td class="govuk-table__cell">
-                      <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-not-running">Not&nbsp;running</span>
-                    </td>
-                    <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell"></td>
-                    <td class="govuk-table__cell"></td> -->
-                  {% if (loop.index < 5) %}
-                    <td class="govuk-table__cell">
-                      <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-heading-s govuk-!-margin-0">{{ course.name }} ({{ course.programmeCode }})</a>
-                      <span class="govuk-body-s">{{ course.options }}</span>
-                    </td>
-                    <td class="govuk-table__cell">
+                  <td class="govuk-table__cell">
+                    <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-heading-s govuk-!-margin-0">{{ course.name }} ({{ course.programmeCode }})</a>
+                    <span class="govuk-body-s">{{ course.options }}</span>
+                  </td>
+                  <td class="govuk-table__cell">
+                    {% if data[course.programmeCode + '-publish-state'] == 'draft' %}
+                      <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
+                    {% elseif data[course.programmeCode + '-publish-state'] == 'published' %}
                       <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
-                    </td>
-                    <td class="govuk-table__cell no-wrap">
+                    {% elseif data[course.programmeCode + '-publish-state'] == 'published-with-changes' %}
+                      <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published govuk-!-margin-bottom-1">Published&nbsp;*</span><br />
+                      <span class="govuk-body-s">* Unpublished changes</span>
+                    {% else %}
+                      <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
+                    {% endif %}
+                  </td>
+                  <td class="govuk-table__cell no-wrap">
+                    {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
                       <a href="#">Yes – view online</a>
-                    </td>
-                    <td class="govuk-table__cell">
-                      {% if data[course.programmeCode + '-vacancies-flag'] == 'Yes' %}Open{% else %}Closed{% endif %}</td>
-                    <td class="govuk-table__cell">{{ data[course.programmeCode + '-vacancies-flag'] }} (<a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/vacancies">Edit</a>)</td>
-                  {% else %}
-                    <td class="govuk-table__cell">
-                      <a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}" class="govuk-heading-s govuk-!-margin-0">{{ course.name }} ({{ course.programmeCode }})</a>
-                      <span class="govuk-body-s">{{ course.options }}</span>
-                    </td>
-                    <td class="govuk-table__cell">
-                      {% if data[course.programmeCode + '-publish-state'] == 'draft' %}
-                        <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-draft">Draft</span>
-                      {% elseif data[course.programmeCode + '-publish-state'] == 'published' %}
-                        <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-published">Published</span>
-                      {% else %}
-                        <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">New</span>
-                      {% endif %}
-                    </td>
-                    <td class="govuk-table__cell no-wrap">
-                      {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
-                        <a href="#">Yes – view online</a>
-                      {% else %}
-                        No – still in draft
-                      {% endif %}
-                    </td>
-                    <td class="govuk-table__cell">
-                      {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
-                        Open
-                      {% endif %}
-                    </td>
-                    <td class="govuk-table__cell">
-                      {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
-                        Yes (<a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/vacancies">Edit</a>)
-                      {% endif %}
-                    </td>
-                  {% endif %}
+                    {% else %}
+                      No – still in draft
+                    {% endif %}
+                  </td>
+                  <td class="govuk-table__cell">
+                    {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
+                      {% if data[course.programmeCode + '-vacancies-flag'] == 'Yes' %}Open{% else %}Closed{% endif %}
+                    {% endif %}
+                  </td>
+                  <td class="govuk-table__cell">
+                    {% if (data[course.programmeCode + '-publish-state'] == 'published' or data[course.programmeCode + '-published-before'] == true) %}
+                      {{ data[course.programmeCode + '-vacancies-flag'] }}  (<a href="/course/{{ data['provider-code'] }}/{{ course.programmeCode }}/vacancies">Edit</a>)
+                    {% endif %}
+                  </td>
                 </tr>
                 {% set subjectName = course.name %}
               {% endif %}
