Re-enable bold on check answers pattern
Because the edit link is gone and the heading has prominence, bold question names won't hide the edit link.

--- a/app/assets/sass/patterns/_course-parts.scss
+++ b/app/assets/sass/patterns/_course-parts.scss
@@ -36,7 +36,7 @@ $course-parts-indent: 35px;
   }
 
   .app-check-your-answers__question {
-    font-weight: normal;
+    // font-weight: normal;
 
     &.app-check-your-answers__question--error {
       font-weight: bold;
