--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -8,7 +8,7 @@
   </div>
 
   <h1 class="govuk-heading-xl">
-    <span class="govuk-!-font-size-36">{{ data['training-provider-name'] }}</span>
+    <span class="govuk-!-font-size-36">{{ data['training-provider-name'] }}</span><br />
     {{ course.name }} ({{ course.programmeCode }})
   </h1>
 
