Tweak documentation on original publish statuses

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -189,6 +189,13 @@
       </p>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/publish-changes/iteration-aug-15">Publishing workflow – Iteration 15 August</a>
+      </h3>
+      <p>
+        Adding clearer status labels.
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/who-did-what-when">Who did what and when</a>
       </h3>
       <p>
