--- a/app/views/history/publish-changes/iteration-aug-15.html
+++ b/app/views/history/publish-changes/iteration-aug-15.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Publishing workflow – iteration 15 August' %}
+{% set title = 'Publishing workflow – Iteration 15 August' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block breadcrumbs %}{{ macros.designHistoryBreadcrumbs() }}{% endblock %}
 
@@ -9,13 +9,13 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>An iteration on <a href="/history/publish-changes">the original</a> that highlights the ‘unpublished changes’ aspect of the publish sidebar.</p>
-      <p>It needs to be more obvious when there’s something that needs publishing.</p>
+      <p>An iteration on <a href="/history/publish-changes">the original</a></p>
+      <p>There was <a href="/history/user-research-aug-22#workflow-states">earlier iteration of this design</a> that highlighted the ‘unpublished changes’ aspect of the publish sidebar, which was replaced with new/draft/published statuses.</p>
       <p>We also <a href="/history/who-did-what-when">added a user and timestamp</a>.</p>
+
+      <h2 class="govuk-heading-l" id="about-your-organisation-heading">About your organisation</h2>
     </div>
   </div>
-
-  <h2 class="govuk-heading-l" id="about-your-organisation-heading">About your organisation</h2>
 
   <div class="govuk-grid-row" style="margin-left: -165px; margin-right: -165px">
     <div class="govuk-grid-column-one-quarter">
