--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">January 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/edit-course-information">Course page – Iteration 11 January</a>
+      </h3>
+      <p>
+        Edit course information, update the status column
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/migrating-publish-statuses">Migrating publish statuses</a>
       </h3>
       <p>
