Include screens of error states

--- a/app/views/history/edit-course-information/index.html
+++ b/app/views/history/edit-course-information/index.html
@@ -60,6 +60,7 @@
     { text: 'Published with unpublished changes', id: 'published-with-unpublished-changes' },
     { text: 'Draft course', id: 'draft-course' },
     { text: 'New course', id: 'new-course' },
+    { text: 'Course with publish errors', id: 'course-with-publish-errors' },
     { text: 'Change course information', id: 'change-course-information' },
     { text: 'Confirm answers (for comparison)', id: 'confirm-answers-for-comparison' },
     { text: 'Organisation', id: 'organisation' }
@@ -73,6 +74,8 @@
   {{ macros.screenshot('Draft course', 'draft-course', '/public/images/history/edit-course-information/thumbnails/04-draft-course.png', '/public/images/history/edit-course-information/04-draft-course.png', '') }}
 
   {{ macros.screenshot('New course', 'new-course', '/public/images/history/edit-course-information/thumbnails/05-new-course.png', '/public/images/history/edit-course-information/05-new-course.png', '') }}
+
+  {{ macros.screenshot('Course with publish errors', 'course-with-publish-errors', '/public/images/history/edit-course-information/thumbnails/01-course-with-publish-errors.png', '/public/images/history/edit-course-information/01-course-with-publish-errors.png', '') }}
 
   {{ macros.screenshot('Change course information', 'change-course-information', '/public/images/history/edit-course-information/thumbnails/06-change-course-information.png', '/public/images/history/edit-course-information/06-change-course-information.png', '') }}
 
